Bug 52150 - Graphical objects not drawn with SNA acceleration on GM45
Summary: Graphical objects not drawn with SNA acceleration on GM45
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.6 (2010.12)
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-16 12:48 UTC by sergio.callegari
Modified: 2012-07-20 09:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
libreoffice file for testing (29.03 KB, application/vnd.oasis.opendocument.presentation)
2012-07-16 13:19 UTC, sergio.callegari
no flags Details
SNA screenshot (with issues) (224.31 KB, image/png)
2012-07-16 13:19 UTC, sergio.callegari
no flags Details
UXA screenshot (OK) (231.16 KB, image/png)
2012-07-16 13:20 UTC, sergio.callegari
no flags Details

Description sergio.callegari 2012-07-16 12:48:09 UTC
In order to solve other issues, I am now running the latest intel drivers, together with kernel 3.4.4 on a DELL E6500 with intel graphics and Kubuntu linux 12.04 64 bit. Since these drivers support sna acceleration, I have decided to give it a try.  Most things appear to be working. However, major issues exist with the libreoffice application. Specifically, running Libreoffice Impress some graphical elements are not shown on screen at all.

Hardware:
Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller

Software:
Kernel 3.4.4 
(from ubuntu mainline PPA)

libdrm 2.4.37 + git 120716
mesa 8.1 + git 120608
xserver-video-intel 2.19 + git 120713
(this later stuff from the oibaf graphics drivers PPA, aka Fabio Pedretti's PPA)

To reproduce:
1) put accelmethod sna in xorg.conf
2) Run libreoffice impress

Actual result:
1) See that in many slides, the background appears gray instead of white as it should.
2) See that many mathematical formulas (OLE objects in libreoffice) are not displayed.

Reverting to uxa acceleration on the same driver fixes the visual issues.
Comment 1 Chris Wilson 2012-07-16 12:51:15 UTC
Please attach a good/bad screenshot so that I can be sure I'm hunting the same issue.
Comment 2 sergio.callegari 2012-07-16 13:19:22 UTC
Created attachment 64272 [details]
libreoffice file for testing

Tested with libreoffice 3.5.5
Comment 3 sergio.callegari 2012-07-16 13:19:53 UTC
Created attachment 64273 [details]
SNA screenshot (with issues)
Comment 4 sergio.callegari 2012-07-16 13:20:18 UTC
Created attachment 64275 [details]
UXA screenshot (OK)
Comment 5 Chris Wilson 2012-07-16 13:51:59 UTC
commit 907a2a7c97514d3f7610648ed87c7042a857f786
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jul 16 14:47:03 2012 +0100

    sna/trapezoids: Fix inplace unaligned fills (on gen4)
    
    Reported-by: Sergio Callegari <sergio.callegari@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=52150
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Haven't checked the OLE objects just yet, though very likely to be the same bug.
Comment 6 sergio.callegari 2012-07-17 21:55:43 UTC
As soon as the current git, with the above commit, gets into an updated deb on the ubuntu ppa, I'll provide some feedback about the libreoffice OLE.  Thanks for the very quick response!
Comment 7 sergio.callegari 2012-07-20 09:46:47 UTC
I confirm that it seems to be ok with the latest packaged git driver (20/7/12)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.