sna/trapezoids: Fix inplace unaligned fills (on gen4)

Reported-by: Sergio Callegari <sergio.callegari@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=52150
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>